convert to typescript, export as esm & commonjs

--- a/demo/minimal.html
+++ b/demo/minimal.html
@@ -49,7 +49,7 @@
 	</div>
 
 	<script type="module">
-		import { AudioMotionAnalyzer } from '../dist/esm/index.mjs';
+		import AudioMotionAnalyzer from '../dist/esm/index.mjs';
 
 		const container = document.getElementById('container'),
 			audioContainer = document.getElementById('audio-container'),
