docs: add demo for the UMD module

--- a/demo/index.html
+++ b/demo/index.html
@@ -35,13 +35,14 @@
         </ul>
     </div>
 
-    <p><strong>Note:</strong> these demos won't work if loaded via <code>file://</code> protocol. See the README file inside the <code>demo/</code> folder for more information.</p>
+    <p><strong>Note:</strong> except for the <a href="umd.html">UMD demo</a>, these won't work if loaded via <code>file://</code> protocol. See the README file inside the <code>demo/</code> folder for more information.</p>
 
     <h2><a href="minimal.html">▶ Minimal demo</a></h2>
 
     <ul>
         <li>A simple demo on how to create and destroy <em>audioMotion-analyzer</em> instances;</li>
-        <li>Uses a live stream as audio source (note: streams currently do <strong>NOT</strong> work on <strong>Safari</strong> - see the <a href="https://audiomotion.dev/#/?id=known-issues">known issues</a>).</li>
+        <li>Uses a live stream as audio source (note: streams currently do <strong>NOT</strong> work on <strong>Safari</strong> - see the <a href="https://audiomotion.dev/#/?id=known-issues">known issues</a>);</li>
+        <li><a href="umd.html">This alternate version demonstrates how to use the UMD module via global variable.</a></li>
     </ul>
 
     <h2><a href="fluid.html">▶ Fluid layout demo</a></h2>
