--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 			]
 		}
 	</script>
-	<script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-	<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+	<script src="//unpkg.com/docsify@4/lib/docsify.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.min.js"></script>
 	<!-- docsify-themeable -->
 	<script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
 </body>
