--- a/demo/index.html
+++ b/demo/index.html
@@ -60,10 +60,10 @@
         <li>Three analyzer instances share the same audio source and <em>AudioContext</em>, but each has its own configuration settings.</li>
     </ul>
 
-    <h2><a href="overlay.html">▶ Overlay demo</a></h2>
+    <h2><a href="overlay.html">▶ Video overlay demo</a></h2>
 
     <ul>
-        <li><em>audioMotion-analyzer</em> is connected to a <code>&lt;video&gt;</code> element and displayed over it with semi-transparent background;
+        <li><em>audioMotion-analyzer</em> is connected to a <code>&lt;video&gt;</code> element and the audio visualization is overlaid to the video;
         <li>Fullscreen is handled on the parent container element.</li>
     </ul>
 
