--- a/demo/multi.html
+++ b/demo/multi.html
@@ -21,9 +21,9 @@
 	<p>&nbsp;</p>
 
 	<div class="multi-block">
-		<div id="container0" class="colspan-2 rowspan-2"></div>
-		<div id="container1"></div>
-		<div id="container2"></div>
+		<div id="container0" class="container colspan-2 rowspan-2"></div>
+		<div id="container1" class="container"></div>
+		<div id="container2" class="container"></div>
 	</div>
 	<audio id="audio" controls crossorigin="anonymous"></audio>
 
@@ -51,17 +51,14 @@
 
 			<label class="label">mode
 				<select data-setting="mode">
-					<option value="0">[ 0 ] Discrete frequencies</option>
-					<option value="1">[ 1 ] 1/24th octave / 240 bands</option>
-					<option value="2">[ 2 ] 1/12th octave / 120 bands</option>
-					<option value="3">[ 3 ] 1/8th octave / 80 bands</option>
-					<option value="4">[ 4 ] 1/6th octave / 60 bands</option>
-					<option value="5">[ 5 ] 1/4th octave / 40 bands</option>
-					<option value="6">[ 6 ] 1/3rd octave / 30 bands</option>
-					<option value="7">[ 7 ] Half octave / 20 bands</option>
-					<option value="8">[ 8 ] Full octave / 10 bands</option>
-					<option value="10">[10] Line / Area graph</option>
+					<option value="bars">bars</option>
+					<option value="graph">graph</option>
 				</select>
+			</label>
+
+			<label class="label">bandResolution
+				<input type="range" min="0" max="8" data-setting="bandResolution" style="width: 100px;">
+				<div class="value"></div>
 			</label>
 
 			<label class="label">colorMode
@@ -315,8 +312,8 @@
 			<button data-prop="splitGradient">splitGradient</button>
 			<button data-prop="trueLeds">trueLeds</button>
 			<br>
-			<button data-prop="showBgColor">showBgColor</button>
 			<button data-prop="showFPS">showFPS</button>
+			<button data-prop="showLedMask">showLedMask</button>
 			<button data-prop="showPeaks">showPeaks</button>
 			<button data-prop="showScaleX">showScaleX</button>
 			<button data-prop="showScaleY">showScaleY</button>
