--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>audioMotion-analyzer overlay demo</title>
+	<title>audioMotion-analyzer video overlay demo</title>
 	<link href="https://fonts.googleapis.com/css?family=Orbitron:900" rel="stylesheet">
 	<link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
 	<header>
-		<h1><a href="https://audiomotion.dev" class="logo">audioMotion-analyzer</a> | overlay demo</h1>
+		<h1><a href="https://audiomotion.dev" class="logo">audioMotion-analyzer</a> | video overlay demo</h1>
 		<ul class="header-nav">
 			<li><a href="index.html">Demos</a></li>
             <li><a href="https://audiomotion.dev">Home</a></li>
@@ -30,17 +30,14 @@
 
 			<label class="label">mode
 				<select data-setting="mode">
-					<option value="0">[ 0 ] Discrete frequencies</option>
-					<option value="1">[ 1 ] 1/24th octave / 240 bands</option>
-					<option value="2">[ 2 ] 1/12th octave / 120 bands</option>
-					<option value="3">[ 3 ] 1/8th octave / 80 bands</option>
-					<option value="4">[ 4 ] 1/6th octave / 60 bands</option>
-					<option value="5">[ 5 ] 1/4th octave / 40 bands</option>
-					<option value="6">[ 6 ] 1/3rd octave / 30 bands</option>
-					<option value="7">[ 7 ] Half octave / 20 bands</option>
-					<option value="8">[ 8 ] Full octave / 10 bands</option>
-					<option value="10">[10] Line / Area graph</option>
+					<option value="bars">bars</option>
+					<option value="graph">graph</option>
 				</select>
+			</label>
+
+			<label class="label">bandResolution
+				<input type="range" min="0" max="8" data-setting="bandResolution" style="width: 100px;">
+				<div class="value"></div>
 			</label>
 
 			<label class="label">colorMode
@@ -182,15 +179,6 @@
 					<div class="value"></div>
 				</label>
 			</fieldset>
-
-			<fieldset>
-				<legend>Overlay mode</legend>
-				<button data-prop="overlay">overlay</button>
-				<label class="label">bgAlpha
-					<input type="range" id="bg_alpha" min="0" max="1" step=".1" data-setting="bgAlpha">
-					<div class="value"></div>
-				</label>
-			</fieldset>
 		</div>
 
 		<div class="box center">
@@ -277,8 +265,8 @@
 			<button data-prop="splitGradient">splitGradient</button>
 			<button data-prop="trueLeds">trueLeds</button>
 			<br>
-			<button data-prop="showBgColor">showBgColor</button>
 			<button data-prop="showFPS">showFPS</button>
+			<button data-prop="showLedMask">showLedMask</button>
 			<button data-prop="showPeaks">showPeaks</button>
 			<button data-prop="showScaleX">showScaleX</button>
 			<button data-prop="showScaleY">showScaleY</button>
