--- a/demo/minimal.html
+++ b/demo/minimal.html
@@ -30,12 +30,12 @@
 				<strong>audioMotion-analyzer</strong> automatically starts its AudioContext on the first user gesture it detects, but be aware
 				that clicks on native controls of <code>&lt;audio&gt;</code> or <code>&lt;video&gt;</code> elements cannot be intercepted by JavaScript.
 			</p>
-			<button id="btn_start">Start audioMotion</button>
+			<button id="btn_start">Create instance</button>
 		</div>
 	</div>
 	<div id="audio-container"></div>
 	<div id="message" class="box center"></div>
-	<div><button id="btn_destroy">Destroy audioMotion</button></div>
+	<div><button id="btn_destroy">Destroy instance</button></div>
 	<div class="credits">
 		<strong>audioMotion-analyzer</strong> v<span id="version"></span> Copyright &copy; 2018-2025 Henrique Avila Vianna. Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
 		Live stream: <a href="https://federalfm.ufpel.edu.br">Rádio Federal FM</a>.
