--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -284,14 +284,11 @@
 				<label class="label">Enable
 					<input id="customLeds" type="checkbox" data-custom="ledParams">
 				</label>
-				<label class="label"><a href="https://audiomotion.dev/#/?id=setledparams-params-" target="_blank">maxLeds</a>
-					<input id="maxLeds" type="number" min="1" max="256" value="128" data-custom="ledParams">
+				<label class="label"><a href="https://audiomotion.dev/#/?id=setledparams-params-" target="_blank">ledHeight</a>
+					<input id="ledHeight" type="number" min="1" max="50" value="16" data-custom="ledParams">
 				</label>
-				<label class="label"><a href="https://audiomotion.dev/#/?id=setledparams-params-" target="_blank">spaceV</a>
-					<input id="spaceV" type="number" min=".05" max="20" step=".05" value="4" data-custom="ledParams">
-				</label>
-				<label class="label"><a href="https://audiomotion.dev/#/?id=setledparams-params-" target="_blank">spaceH</a>
-					<input id="spaceH" type="number" min="0" max="1" step=".05" value=".8" data-custom="ledParams">
+				<label class="label"><a href="https://audiomotion.dev/#/?id=setledparams-params-" target="_blank">ledGap</a>
+					<input id="ledGap" type="number" min="1" max="50" value="4" data-custom="ledParams">
 				</label>
 			</fieldset>
 
