--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -69,16 +69,16 @@
 				</select>
 			</label>
 
-			<label class="label"><a href="https://audiomotion.dev/#/?id=gradient-string" target="_blank">gradient</a>
-				<select data-setting="gradient"></select>
+			<label class="label"><a href="https://audiomotion.dev/#/?id=theme-string" target="_blank">theme</a>
+				<select data-setting="theme"></select>
 			</label>
 
-			<label class="label"><a href="https://audiomotion.dev/#/?id=gradientleft-string" target="_blank">gradientLeft</a>
-				<select data-setting="gradientLeft"></select>
+			<label class="label"><a href="https://audiomotion.dev/#/?id=themeleft-string" target="_blank">themeLeft</a>
+				<select data-setting="themeLeft"></select>
 			</label>
 
-			<label class="label"><a href="https://audiomotion.dev/#/?id=gradientright-string" target="_blank">gradientRight</a>
-				<select data-setting="gradientRight"></select>
+			<label class="label"><a href="https://audiomotion.dev/#/?id=themeright-string" target="_blank">themeRight</a>
+				<select data-setting="themeRight"></select>
 			</label>
 
 			<label class="label"><a href="https://audiomotion.dev/#/?id=channellayout-string" target="_blank">channelLayout</a>
