--- a/demo/multi.html
+++ b/demo/multi.html
@@ -69,16 +69,16 @@
 				</select>
 			</label>
 
-			<label class="label">gradient
-				<select data-setting="gradient"></select>
+			<label class="label">theme
+				<select data-setting="theme"></select>
 			</label>
 
-			<label class="label">gradientLeft
-				<select data-setting="gradientLeft"></select>
+			<label class="label">themeLeft
+				<select data-setting="themeLeft"></select>
 			</label>
 
-			<label class="label">gradientRight
-				<select data-setting="gradientRight"></select>
+			<label class="label">themeRight
+				<select data-setting="themeRight"></select>
 			</label>
 
 			<label class="label">channelLayout
