--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -48,24 +48,12 @@
 				</select>
 			</label>
 
-			<label class="label">gradientLeft
-				<select data-setting="gradientLeft">
-					<option value="classic">classic</option>
-					<option value="prism">prism</option>
-					<option value="rainbow">rainbow</option>
-					<option value="steelblue">steelblue</option>
-					<option value="orangered">orangered</option>
-				</select>
+			<label class="label">themeLeft
+				<select data-setting="themeLeft"></select>
 			</label>
 
-			<label class="label">gradientRight
-				<select data-setting="gradientRight">
-					<option value="classic">classic</option>
-					<option value="prism">prism</option>
-					<option value="rainbow">rainbow</option>
-					<option value="steelblue">steelblue</option>
-					<option value="orangered">orangered</option>
-				</select>
+			<label class="label">themeRight
+				<select data-setting="themeRight"></select>
 			</label>
 
 			<label class="label">channelLayout
